dan ma er man ren wei zhei xie fu shu ye wu bu hui dui ping guo ye ji chan sheng tai da ying xiang

--- a/about-us.htm
+++ b/about-us.htm
@@ -5,18 +5,18 @@
         <link rel="canonical" href="https://clashnode.github.io" />
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <title>关于我们 - Clash Node官网订阅站</title>
+    <title>关于我们 - Clash Node免费节点站</title>
     <link rel="icon" href="/assets/website/img/clashnode/favicon.ico" type="image/x-icon"/>
-        <meta name="keywords" content="关于我们 - Clash Node官网订阅站" />
-        <meta name="description" content="关于我们 - Clash Node官网订阅站" />
+        <meta name="keywords" content="关于我们 - Clash Node免费节点站" />
+        <meta name="description" content="关于我们 - Clash Node免费节点站" />
     
-    <meta name="author" content="Clash Node官网订阅站">
+    <meta name="author" content="Clash Node免费节点站">
     <meta property="og:type" content="webpage" />
     <meta property="og:url" content="https://clashnode.github.io" />
-    <meta property="og:site_name" content="Clash Node官网订阅站" />
-    <meta property="og:title" content="关于我们 - Clash Node官网订阅站" />
+    <meta property="og:site_name" content="Clash Node免费节点站" />
+    <meta property="og:title" content="关于我们 - Clash Node免费节点站" />
     <meta property="og:image" content="/assets/website/img/clashnode/favicon.ico" />
-        <meta property="og:description" content="关于我们 - Clash Node官网订阅站" />
+        <meta property="og:description" content="关于我们 - Clash Node免费节点站" />
         
     <meta name="applicable-device" content="pc,mobile" />
     <meta name="renderer" content="webkit" />
@@ -25,7 +25,7 @@
     <meta name="robots" content="max-image-preview:large" />
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <meta name="apple-mobile-web-app-title" content="关于我们 - Clash Node官网订阅站">
+    <meta name="apple-mobile-web-app-title" content="关于我们 - Clash Node免费节点站">
     <meta name="format-detection" content="telephone=no">
 
     <link rel="dns-prefetch" href="https:/www.googletagmanager.com">
@@ -114,13 +114,13 @@
         <div class="row">
             <div class="col-md-8">
                 <div class="post-content-content">
-                    <p>在网络的浩瀚宇宙中，有一个名字如同璀璨的星辰，照亮了无数寻求自由网络之路的人们——Clash Node官网订阅站。这不仅仅是一个提供免费节点订阅服务的平台，更是一场关于勇气、智慧与梦想的创业传奇。</p>
-<p>故事的起点，可以追溯到那个网络封锁日益严重的年代。那时，网络世界仿佛被一层无形的墙所隔绝，人们渴望着能够自由穿梭于信息的海洋之中。正是在这样的背景下，Clash Node官网订阅站的创始人，一位名叫李明的年轻工程师，怀揣着对自由的渴望和对技术的热爱，踏上了创业之路。</p>
+                    <p>在网络的浩瀚宇宙中，有一个名字如同璀璨的星辰，照亮了无数寻求自由网络之路的人们——Clash Node免费节点站。这不仅仅是一个提供免费节点订阅服务的平台，更是一场关于勇气、智慧与梦想的创业传奇。</p>
+<p>故事的起点，可以追溯到那个网络封锁日益严重的年代。那时，网络世界仿佛被一层无形的墙所隔绝，人们渴望着能够自由穿梭于信息的海洋之中。正是在这样的背景下，Clash Node免费节点站的创始人，一位名叫李明的年轻工程师，怀揣着对自由的渴望和对技术的热爱，踏上了创业之路。</p>
 <p>李明原本在一家知名互联网公司担任技术骨干，每天面对着繁琐的代码和无尽的压力。然而，他内心深处始终有一个声音在呼唤，那就是打破网络束缚，让每一个人都能享受到自由、平等的网络访问权。于是，他毅然决然地辞去了工作，踏上了创业的征途。</p>
 <p>起初，李明的创业之路并不顺利。他面临着资金短缺、技术难题以及来自各方面的压力和质疑。然而，他并没有放弃，而是凭借着对技术的深厚功底和对梦想的执着追求，一步步克服了一个又一个难关。</p>
-<p>在这个过程中，李明遇到了志同道合的伙伴们。他们有的是经验丰富的程序员，有的是对网络自由充满热情的年轻人。大家汇聚一堂，共同为Clash Node官网订阅站的未来而努力。他们日夜奋战，不断优化平台功能，提升用户体验。终于，在无数个不眠之夜后，Clash Node官网订阅站横空出世，以其稳定、高效的免费节点订阅服务，迅速赢得了广大用户的喜爱和信赖。</p>
-<p>然而，创业的道路从来都不是一帆风顺的。随着Clash Node官网订阅站的知名度越来越高，也引来了不少竞争对手的恶意攻击和诽谤。面对这些挑战，李明和他的团队始终保持着冷静和理智。他们坚信，只要坚持为用户提供优质的服务和真诚的态度，就一定能够赢得用户的信任和支持。</p>
-<p>如今，Clash Node官网订阅站已经成为了一个备受瞩目的创业传奇。它不仅为用户提供了便捷、高效的免费节点订阅服务，更成为了网络自由、信息平等的象征。在这个充满挑战和机遇的时代里，Clash Node官网订阅站将继续秉持着初心和使命，为每一个渴望自由网络的人们保驾护航。</p>
+<p>在这个过程中，李明遇到了志同道合的伙伴们。他们有的是经验丰富的程序员，有的是对网络自由充满热情的年轻人。大家汇聚一堂，共同为Clash Node免费节点站的未来而努力。他们日夜奋战，不断优化平台功能，提升用户体验。终于，在无数个不眠之夜后，Clash Node免费节点站横空出世，以其稳定、高效的免费节点订阅服务，迅速赢得了广大用户的喜爱和信赖。</p>
+<p>然而，创业的道路从来都不是一帆风顺的。随着Clash Node免费节点站的知名度越来越高，也引来了不少竞争对手的恶意攻击和诽谤。面对这些挑战，李明和他的团队始终保持着冷静和理智。他们坚信，只要坚持为用户提供优质的服务和真诚的态度，就一定能够赢得用户的信任和支持。</p>
+<p>如今，Clash Node免费节点站已经成为了一个备受瞩目的创业传奇。它不仅为用户提供了便捷、高效的免费节点订阅服务，更成为了网络自由、信息平等的象征。在这个充满挑战和机遇的时代里，Clash Node免费节点站将继续秉持着初心和使命，为每一个渴望自由网络的人们保驾护航。</p>
                 </div>
             </div>
             <div class="col-md-4 w3l-services">
@@ -129,8 +129,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-8-7-free-clash-subscribe.htm">8月7日更新20.1M/S，2025年最新高速Clash/SSR/Shadowrocket/V2ray订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了美国、欧洲、韩国、新加坡、加拿大、日本、香港等地区,最高速度可达20.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2025-9-13-free-ssr-node.htm">9月13日更新19.2M/S，2025年最新高速Clash节点/SSR/V2ray节点/Shadowrocket订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了香港、美国、韩国、日本、欧洲、新加坡、加拿大等地区,最高速度可达19.2 M/S。只需复制下方的Clash节点、V2ray节点、Singbox节点订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -139,8 +139,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-9-16-free-subscribe-node.htm">9月16日更新21.7M/S，2025年最新高速V2ray/Clash/SSR/Shadowrocket订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了新加坡、加拿大、欧洲、美国、韩国、日本、香港等地区,最高速度可达21.7 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2025-8-30-clash-node-daily-updates.htm">8月30日更新18.8M/S，2025年最新高速V2ray节点/Shadowrocket节点/Clash节点/SSR订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了香港、韩国、加拿大、日本、新加坡、欧洲、美国等地区,最高速度可达18.8 M/S。只需复制下方的Clash节点、V2ray节点、Singbox节点订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -149,8 +149,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-8-14-free-high-speed-nodes.htm">8月14日更新20.5M/S，2025年最新高速V2ray/Clash/SSR/Shadowrocket订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了香港、新加坡、欧洲、日本、韩国、加拿大、美国等地区,最高速度可达20.5 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2025-9-5-free-ssr-node.htm">9月5日更新21.5M/S，2025年最新高速Shadowrocket节点/SSR/V2ray节点/Clash订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了美国、加拿大、日本、欧洲、香港、韩国、新加坡等地区,最高速度可达21.5 M/S。只需复制下方的Clash节点、V2ray节点、Singbox节点订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -159,8 +159,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-8-4-clash-node.htm">8月4日更新18.7M/S，2025年最新高速Shadowrocket/V2ray/SSR/Clash订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了香港、韩国、日本、美国、欧洲、加拿大、新加坡等地区,最高速度可达18.7 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2025-8-10-free-clash-subscribe.htm">8月10日更新18.7M/S，2025年最新高速V2ray节点/Shadowrocket节点/SSR/Clash订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了欧洲、加拿大、新加坡、韩国、日本、美国、香港等地区,最高速度可达18.7 M/S。只需复制下方的Clash节点、V2ray节点、Singbox节点订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -169,8 +169,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-8-6-free-subscribe-node.htm">8月6日更新18.7M/S，2025年最新高速Shadowrocket/SSR/Clash/V2ray订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了香港、新加坡、日本、加拿大、韩国、美国、欧洲等地区,最高速度可达18.7 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2025-8-6-free-subscribe-node.htm">8月6日更新18.7M/S，2025年最新高速Shadowrocket节点/SSR/Clash节点/V2ray订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了香港、新加坡、日本、加拿大、韩国、美国、欧洲等地区,最高速度可达18.7 M/S。只需复制下方的Clash节点、V2ray节点、Singbox节点订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -179,8 +179,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-9-7-free-subscribe-node.htm">9月7日更新18.4M/S，2025年最新高速Shadowrocket/SSR/V2ray/Clash订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了欧洲、加拿大、日本、美国、香港、新加坡、韩国等地区,最高速度可达18.4 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2025-8-29-free-high-speed-nodes.htm">8月29日更新21.7M/S，2025年最新高速SSR/Shadowrocket节点/Clash节点/V2ray订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了日本、香港、韩国、加拿大、欧洲、美国、新加坡等地区,最高速度可达21.7 M/S。只需复制下方的Clash节点、V2ray节点、Singbox节点订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -189,8 +189,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-8-10-free-clash-subscribe.htm">8月10日更新18.7M/S，2025年最新高速V2ray/Shadowrocket/SSR/Clash订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了欧洲、加拿大、新加坡、韩国、日本、美国、香港等地区,最高速度可达18.7 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2025-8-19-free-node-subscribe.htm">8月19日更新19.7M/S，2025年最新高速Clash节点/V2ray节点/Shadowrocket节点/SSR订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了韩国、美国、加拿大、欧洲、日本、香港、新加坡等地区,最高速度可达19.7 M/S。只需复制下方的Clash节点、V2ray节点、Singbox节点订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -199,8 +199,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-9-22-free-high-speed-nodes.htm">9月22日更新22.2M/S，2025年最新高速Clash/V2ray/Shadowrocket/SSR订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了新加坡、美国、香港、韩国、日本、加拿大、欧洲等地区,最高速度可达22.2 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2025-8-24-free-node-subscribe.htm">8月24日更新22.4M/S，2025年最新高速Shadowrocket节点/V2ray节点/SSR/Clash订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了日本、美国、欧洲、新加坡、韩国、香港、加拿大等地区,最高速度可达22.4 M/S。只需复制下方的Clash节点、V2ray节点、Singbox节点订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -209,8 +209,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-8-24-free-node-subscribe.htm">8月24日更新22.4M/S，2025年最新高速Shadowrocket/V2ray/SSR/Clash订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了日本、美国、欧洲、新加坡、韩国、香港、加拿大等地区,最高速度可达22.4 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2025-8-13-free-subscribe-node.htm">8月13日更新20.4M/S，2025年最新高速V2ray节点/SSR/Shadowrocket节点/Clash订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了加拿大、香港、新加坡、日本、欧洲、韩国、美国等地区,最高速度可达20.4 M/S。只需复制下方的Clash节点、V2ray节点、Singbox节点订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -219,8 +219,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-8-17-free-node-subscribe-links.htm">8月17日更新21M/S，2025年最新高速SSR/V2ray/Clash/Shadowrocket订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了香港、日本、欧洲、韩国、美国、新加坡、加拿大等地区,最高速度可达21 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2025-8-5-free-clash.htm">8月5日更新21.3M/S，2025年最新高速Clash节点/V2ray节点/Shadowrocket节点/SSR订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了香港、美国、欧洲、加拿大、新加坡、韩国、日本等地区,最高速度可达21.3 M/S。只需复制下方的Clash节点、V2ray节点、Singbox节点订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -231,7 +231,7 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                                <h4><span class="badge" style="float: right;">18</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
+                                <h4><span class="badge" style="float: right;">20</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
                                 <h4><span class="badge" style="float: right;">28</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
                             </div>
         </div>
@@ -258,7 +258,7 @@
                         <a href="/privacy.htm">隐私申明</a> |
                         <a href="/sitemap.xml">网站地图</a>
                     </p>
-                                            <p class="m-0">Clash Node官网订阅站 版权所有</p>
+                                            <p class="m-0">Clash Node免费节点站 版权所有</p>
                     </div>
                     <div class="col-lg-4 footer-right text-lg-right text-center mt-lg-0 mt-3">
                         <ul class="social m-0 p-0">
