--- a/about-us.htm
+++ b/about-us.htm
@@ -129,8 +129,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-8-15-shadowrocket-node.htm">8月15日更新18.6M/S，2025年最新高速Clash节点/V2ray节点/SSR/Shadowrocket订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了欧洲、香港、美国、日本、新加坡、韩国、加拿大等地区,最高速度可达18.6 M/S。只需复制下方的Clash节点、V2ray节点、Singbox节点订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2025-9-15-free-shadowrocket-node.htm">9月15日更新19.6M/S，2025年最新高速SSR/Clash节点/V2ray节点/Shadowrocket订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了香港、新加坡、加拿大、欧洲、韩国、美国、日本等地区,最高速度可达19.6 M/S。只需复制下方的Clash节点、V2ray节点、Singbox节点订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -139,8 +139,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-9-14-free-ssr-node.htm">9月14日更新18.4M/S，2025年最新高速SSR/Shadowrocket节点/V2ray节点/Clash订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了韩国、加拿大、欧洲、美国、香港、日本、新加坡等地区,最高速度可达18.4 M/S。只需复制下方的Clash节点、V2ray节点、Singbox节点订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2025-9-11-free-v2ray-subscribe.htm">9月11日更新20.1M/S，2025年最新高速Shadowrocket节点/SSR/Clash节点/V2ray订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了加拿大、日本、美国、欧洲、韩国、新加坡、香港等地区,最高速度可达20.1 M/S。只需复制下方的Clash节点、V2ray节点、Singbox节点订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -149,8 +149,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-8-6-free-subscribe-node.htm">8月6日更新18.7M/S，2025年最新高速Shadowrocket节点/SSR/Clash节点/V2ray订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了香港、新加坡、日本、加拿大、韩国、美国、欧洲等地区,最高速度可达18.7 M/S。只需复制下方的Clash节点、V2ray节点、Singbox节点订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2025-9-17-free-ssr-node.htm">9月17日更新20.9M/S，2025年最新高速Shadowrocket节点/SSR/V2ray节点/Clash订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了香港、韩国、欧洲、新加坡、日本、加拿大、美国等地区,最高速度可达20.9 M/S。只需复制下方的Clash节点、V2ray节点、Singbox节点订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -169,8 +169,38 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-9-20-clash-windows.htm">9月20日更新22.7M/S，2025年最新高速V2ray节点/Clash节点/SSR/Shadowrocket订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了加拿大、香港、欧洲、韩国、新加坡、美国、日本等地区,最高速度可达22.7 M/S。只需复制下方的Clash节点、V2ray节点、Singbox节点订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2025-9-26-free-v2ray.htm">9月26日更新19.4M/S，2025年最新高速V2ray节点/Clash节点/Shadowrocket节点/Singbox节点/SSR节点订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了美国、欧洲、韩国、加拿大、日本、香港、新加坡等地区,最高速度可达19.4 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row w3l-achievements">
+    <div class="col-lg-12 item">
+        <div class="card">
+            <div class="box-wrap">
+                <h4><a href="/free-nodes/2025-9-14-free-ssr-node.htm">9月14日更新18.4M/S，2025年最新高速SSR/Shadowrocket节点/V2ray节点/Clash订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了韩国、加拿大、欧洲、美国、香港、日本、新加坡等地区,最高速度可达18.4 M/S。只需复制下方的Clash节点、V2ray节点、Singbox节点订阅链接,在客户端添加后即可正常使用。</p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row w3l-achievements">
+    <div class="col-lg-12 item">
+        <div class="card">
+            <div class="box-wrap">
+                <h4><a href="/free-nodes/2025-9-27-free-node-subscribe.htm">9月27日更新21.2M/S，2025年最新高速Shadowrocket节点/V2ray节点/Singbox节点/SSR节点/Clash节点订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了欧洲、香港、加拿大、新加坡、美国、日本、韩国等地区,最高速度可达21.2 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row w3l-achievements">
+    <div class="col-lg-12 item">
+        <div class="card">
+            <div class="box-wrap">
+                <h4><a href="/free-nodes/2025-10-6-shadowrocket-node.htm">10月6日更新22.4M/S，2025年最新高速Singbox节点/V2ray节点/Shadowrocket节点/SSR节点/Clash节点订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了加拿大、欧洲、韩国、日本、美国、新加坡、香港等地区,最高速度可达22.4 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -189,38 +219,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-8-13-free-subscribe-node.htm">8月13日更新20.4M/S，2025年最新高速V2ray节点/SSR/Shadowrocket节点/Clash订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了加拿大、香港、新加坡、日本、欧洲、韩国、美国等地区,最高速度可达20.4 M/S。只需复制下方的Clash节点、V2ray节点、Singbox节点订阅链接,在客户端添加后即可正常使用。</p>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="row w3l-achievements">
-    <div class="col-lg-12 item">
-        <div class="card">
-            <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-9-21-clash-node.htm">9月21日更新22.3M/S，2025年最新高速V2ray节点/Shadowrocket节点/Clash节点/SSR订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了香港、韩国、美国、日本、新加坡、欧洲、加拿大等地区,最高速度可达22.3 M/S。只需复制下方的Clash节点、V2ray节点、Singbox节点订阅链接,在客户端添加后即可正常使用。</p>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="row w3l-achievements">
-    <div class="col-lg-12 item">
-        <div class="card">
-            <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-8-26-shadowrocket-node.htm">8月26日更新18.9M/S，2025年最新高速SSR/Shadowrocket节点/Clash节点/V2ray订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了美国、加拿大、韩国、香港、日本、新加坡、欧洲等地区,最高速度可达18.9 M/S。只需复制下方的Clash节点、V2ray节点、Singbox节点订阅链接,在客户端添加后即可正常使用。</p>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="row w3l-achievements">
-    <div class="col-lg-12 item">
-        <div class="card">
-            <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-9-15-free-shadowrocket-node.htm">9月15日更新19.6M/S，2025年最新高速SSR/Clash节点/V2ray节点/Shadowrocket订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了香港、新加坡、加拿大、欧洲、韩国、美国、日本等地区,最高速度可达19.6 M/S。只需复制下方的Clash节点、V2ray节点、Singbox节点订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2025-9-7-free-subscribe-node.htm">9月7日更新18.4M/S，2025年最新高速Shadowrocket节点/SSR/V2ray节点/Clash订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了欧洲、加拿大、日本、美国、香港、新加坡、韩国等地区,最高速度可达18.4 M/S。只需复制下方的Clash节点、V2ray节点、Singbox节点订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -231,8 +231,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                                <h4><span class="badge" style="float: right;">25</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
-                                <h4><span class="badge" style="float: right;">28</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
+                                <h4><span class="badge" style="float: right;">4</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
+                                <h4><span class="badge" style="float: right;">19</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
                             </div>
         </div>
     </div>
