--- a/free-nodes/2025-9-25-clash-v2ray-ss-ssr.htm
+++ b/free-nodes/2025-9-25-clash-v2ray-ss-ssr.htm
@@ -205,8 +205,8 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-8-4-clash-node.htm">8月4日更新18.7M/S，2025年最新高速Shadowrocket节点/V2ray节点/SSR/Clash订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了香港、韩国、日本、美国、欧洲、加拿大、新加坡等地区,最高速度可达18.7 M/S。只需复制下方的Clash节点、V2ray节点、Singbox节点订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2025-9-26-free-v2ray.htm">9月26日更新19.4M/S，2025年最新高速V2ray节点/Clash节点/Shadowrocket节点/Singbox节点/SSR节点订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了美国、欧洲、韩国、加拿大、日本、香港、新加坡等地区,最高速度可达19.4 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -215,8 +215,8 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-8-12-clash-node.htm">8月12日更新21.6M/S，2025年最新高速Shadowrocket节点/V2ray节点/Clash节点/SSR订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了美国、欧洲、韩国、香港、新加坡、加拿大、日本等地区,最高速度可达21.6 M/S。只需复制下方的Clash节点、V2ray节点、Singbox节点订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2025-10-5-free-v2ray-subscribe.htm">10月5日更新18.2M/S，2025年最新高速V2ray节点/Shadowrocket节点/Singbox节点/SSR节点/Clash节点订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了美国、欧洲、日本、新加坡、韩国、加拿大、香港等地区,最高速度可达18.2 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -225,18 +225,8 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-9-1-node-share.htm">9月1日更新20.9M/S，2025年最新高速V2ray节点/Clash节点/Shadowrocket节点/SSR订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了加拿大、日本、美国、香港、韩国、新加坡、欧洲等地区,最高速度可达20.9 M/S。只需复制下方的Clash节点、V2ray节点、Singbox节点订阅链接,在客户端添加后即可正常使用。</p>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="row w3l-achievements">
-    <div class="col-lg-12 item">
-        <div class="card">
-            <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-8-8-free-clash.htm">8月8日更新18.9M/S，2025年最新高速SSR/V2ray节点/Shadowrocket节点/Clash订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了韩国、欧洲、香港、美国、新加坡、日本、加拿大等地区,最高速度可达18.9 M/S。只需复制下方的Clash节点、V2ray节点、Singbox节点订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2025-10-4-clash-node-daily-updates.htm">10月4日更新22.7M/S，2025年最新高速Clash节点/Singbox节点/Shadowrocket节点/SSR节点/V2ray节点订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了香港、加拿大、美国、韩国、日本、欧洲、新加坡等地区,最高速度可达22.7 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -255,8 +245,8 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-9-3-free-subscribe-node.htm">9月3日更新21.6M/S，2025年最新高速SSR/Shadowrocket节点/Clash节点/V2ray订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了韩国、美国、新加坡、加拿大、日本、欧洲、香港等地区,最高速度可达21.6 M/S。只需复制下方的Clash节点、V2ray节点、Singbox节点订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2025-9-27-free-node-subscribe.htm">9月27日更新21.2M/S，2025年最新高速Shadowrocket节点/V2ray节点/Singbox节点/SSR节点/Clash节点订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了欧洲、香港、加拿大、新加坡、美国、日本、韩国等地区,最高速度可达21.2 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -265,8 +255,8 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-8-6-free-subscribe-node.htm">8月6日更新18.7M/S，2025年最新高速Shadowrocket节点/SSR/Clash节点/V2ray订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了香港、新加坡、日本、加拿大、韩国、美国、欧洲等地区,最高速度可达18.7 M/S。只需复制下方的Clash节点、V2ray节点、Singbox节点订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2025-9-24-free-ssr-node.htm">9月24日更新21.7M/S，2025年最新高速Singbox节点/SSR节点/Shadowrocket节点/Clash节点/V2ray节点订阅链接|免费机场|免费梯子</a></h4>
+                <p>这一次的节点更新覆盖了日本、新加坡、欧洲、香港、韩国、加拿大、美国等地区,最高速度可达21.7 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -275,8 +265,8 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-9-4-clash-node-daily-updates.htm">9月4日更新20.6M/S，2025年最新高速Clash节点/SSR/V2ray节点/Shadowrocket订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了韩国、日本、新加坡、加拿大、美国、香港、欧洲等地区,最高速度可达20.6 M/S。只需复制下方的Clash节点、V2ray节点、Singbox节点订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2025-9-22-free-high-speed-nodes.htm">9月22日更新22.2M/S，2025年最新高速Clash节点/V2ray节点/Shadowrocket节点/SSR订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了新加坡、美国、香港、韩国、日本、加拿大、欧洲等地区,最高速度可达22.2 M/S。只需复制下方的Clash节点、V2ray节点、Singbox节点订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -285,8 +275,8 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-8-28-clash-windows.htm">8月28日更新20.7M/S，2025年最新高速V2ray节点/Clash节点/SSR/Shadowrocket订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了加拿大、新加坡、韩国、香港、日本、美国、欧洲等地区,最高速度可达20.7 M/S。只需复制下方的Clash节点、V2ray节点、Singbox节点订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2025-9-25-clash-v2ray-ss-ssr.htm">9月25日更新22.6M/S，2025年最新高速SSR节点/V2ray节点/Singbox节点/Clash节点/Shadowrocket节点订阅链接|免费机场|免费梯子</a></h4>
+                <p>这一次的节点更新覆盖了欧洲、韩国、香港、美国、新加坡、日本、加拿大等地区,最高速度可达22.6 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -295,8 +285,18 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-8-27-free-subscribe-node.htm">8月27日更新19.1M/S，2025年最新高速Shadowrocket节点/V2ray节点/SSR/Clash订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了新加坡、美国、香港、欧洲、加拿大、日本、韩国等地区,最高速度可达19.1 M/S。只需复制下方的Clash节点、V2ray节点、Singbox节点订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2025-9-14-free-ssr-node.htm">9月14日更新18.4M/S，2025年最新高速SSR/Shadowrocket节点/V2ray节点/Clash订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了韩国、加拿大、欧洲、美国、香港、日本、新加坡等地区,最高速度可达18.4 M/S。只需复制下方的Clash节点、V2ray节点、Singbox节点订阅链接,在客户端添加后即可正常使用。</p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row w3l-achievements">
+    <div class="col-lg-12 item">
+        <div class="card">
+            <div class="box-wrap">
+                <h4><a href="/free-nodes/2025-9-30-free-clash.htm">9月30日更新21.3M/S，2025年最新高速Clash节点/SSR节点/Shadowrocket节点/Singbox节点/V2ray节点订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了加拿大、美国、欧洲、新加坡、香港、日本、韩国等地区,最高速度可达21.3 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -307,8 +307,8 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                                <h4><span class="badge" style="float: right;">25</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
-                                <h4><span class="badge" style="float: right;">28</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
+                                <h4><span class="badge" style="float: right;">4</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
+                                <h4><span class="badge" style="float: right;">19</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
                             </div>
         </div>
     </div>
